# display-types

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
doc/: setup.md
src/: capabilities.rs  color.rs  features.rs  input.rs  lib.rs  manufacture.rs  panel.rs  prelude.rs  resolved.rs  screen.rs  timing.rs  transfer.rs
src/cea861/: audio.rs  capabilities.rs  colorimetry.rs  dmt_table.rs  hdmi_forum.rs  hdmi_vsdb.rs  hdr.rs  misc.rs  mod.rs  oui.rs  speaker.rs  vesa_dddb.rs  vesa_transfer.rs  vic_table.rs  video_capability.rs  vtdb.rs
src/displayid/: mod.rs  product_type.rs  tag.rs
